--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div ng-controller="appController">
   <h3>Valor no model: {{ currencyVal }}</h31>
   <br /><br />
-  <input type='text' ng-model="currencyVal" mask-currency />
+  <input type='text' ng-model="currencyVal" mask-money />
 </div>
 </body>
 </html>
